--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,108 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+html{
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+main{
+    display: flex;
+}
+
+.main-container{
+    width: 85%;
+    height: 85vh;
+    background-color: #141922;
+}
+
+aside{
+    width: 250px;
+    height: 85vh;
+    background-color: black;
+}
+
+.header{
+    height: 80px;
+    position: relative;
+}
+
+.overlay{
+    width: 100%;
+    height: 80px;
+    background-color: black;
+    opacity: 0.5;
+}
+
+.rec-bar{
+    height: 15vh;
+    background-color: #282828;
+}
+
+.upgrade-button{
+    color: white;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 10px;
+    background-color: #080b12;
+    width: fit-content;
+    font-size: 0.6rem;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    transition: all;
+}
+
+.upgrade-button:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.aside-head{
+    display: flex;
+    align-items: center;
+    height: 10%;
+}
+
+.logo{
+    margin-left: 15px;
+    width: 40px;
+    background-color: white;
+    padding: 3px;
+}
+
+.app-name{
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 5px;
+}
+
+.home{
+    width: 30px;
+}
+
+.option{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-left: 5px solid yellowgreen;
+}
+
+.option-name{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+
+/* responsive per telefono mobile */
+@media screen and (max-width: 552px){
+    aside{
+        width: 80px;
+    }
+
+    span{
+        display: none;
+    }
+}
