--- a/style/style.css
+++ b/style/style.css
@@ -14,32 +14,36 @@ main{
 }
 
 .main-container{
-    width: 85%;
-    height: 85vh;
+    width: 90%;
+    height: 90vh;
     background-color: #141922;
 }
 
 aside{
-    width: 250px;
-    height: 85vh;
+    width: 200px;
+    height: 90vh;
     background-color: black;
 }
 
-.header{
-    height: 80px;
+.header-top{
+    height: 70px;
     position: relative;
 }
 
 .overlay{
     width: 100%;
-    height: 80px;
+    height: 70px;
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.3;
 }
 
 .rec-bar{
-    height: 15vh;
+    height: 10vh;
+    width: 100vw;
     background-color: #282828;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 .upgrade-button{
@@ -69,9 +73,12 @@ aside{
 
 .logo{
     margin-left: 15px;
-    width: 40px;
-    background-color: white;
+    width: 120px;
     padding: 3px;
+}
+
+.small-logo{
+    display: none;
 }
 
 .app-name{
@@ -80,21 +87,131 @@ aside{
     padding: 5px;
 }
 
-.home{
-    width: 30px;
+.option-logo{
+    width: 25px;
 }
 
 .option{
+    width: fit-content;
     display: flex;
     align-items: center;
-    padding: 10px;
-    border-left: 5px solid yellowgreen;
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+.lightgrey{
+    color: rgb(170, 170, 170);
+}
+
+.option:hover{
+    color: white;
+    cursor: pointer;
+}
+
+.selected{
+    border-left: 3px solid yellowgreen;
+    color: white;
+}
+
+.border-bottom{
+    border-bottom: 2px solid yellowgreen;
+    width: 40px;
+    margin: auto;
+    padding: 2px;
 }
 
 .option-name{
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     font-weight: bold;
     margin-left: 10px;
+}
+
+.main-content{
+    height: 75vh;
+    overflow: scroll;
+}
+
+.categories{
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: auto;
+}
+
+.category{
+    width: fit-content;
+    padding: 5px;
+    margin: 10px;
+}
+
+.section{
+    margin: 20px;
+}
+
+.section-name{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.section-content{
+    display: flex;
+}
+
+.album{
+    text-align: center;
+    margin-right: 15px;
+    width: 12vw;
+    position: relative;
+}
+
+.album-img{
+    width: 12vw;
+}
+
+.album-name{
+    font-weight: bold;
+    font-size: 0.9rem;
+    margin: 8px;
+    text-transform: capitalize;
+}
+
+.subtitle{
+    font-size: 0.8rem;
+    color: grey;
+}
+
+.play-overlay{
+    background-color: black;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+}
+
+.play{
+    width: 100%;
+    height: 68%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.play-icon{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+
+}
+
+.play:hover{
+    opacity: 1;
+    cursor: pointer;
 }
 
 
@@ -104,7 +221,27 @@ aside{
         width: 80px;
     }
 
+    .logo{
+        display: none;
+    }
+
+    .small-logo{
+        display: block;
+        width: 75px;
+        padding: 20px;
+    }
+
     span{
         display: none;
+    }
+}
+
+@media screen and (max-width: 878px){
+    .album{
+        width: 20vw;
+    }
+
+    .album-img{
+        width: 18vw;
     }
 }
